--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
             <!-- Mandatory plugins for using Spock -->
-            <plugin>
+             <plugin>
                 <!-- The gmavenplus plugin is used to compile Groovy code. To learn more about this plugin,
                 visit https://github.com/groovy/GMavenPlus/wiki -->
                 <groupId>org.codehaus.gmavenplus</groupId>
@@ -94,6 +94,28 @@
                     </execution>
                 </executions>
             </plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.3.0</version>
+				<configuration>
+					<repoToken>8vwIcNCGFXxVrQgOlZgOrCE4ryKRAOU2G</repoToken>
+                    <sourceDirectories>
+                        <sourceDirectory>${project.basedir}/src/main/resources</sourceDirectory>
+                    </sourceDirectories>
+                    <sourceEncoding>UTF8</sourceEncoding>
+				</configuration>
+			</plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <check>true</check>
+                    <format>xml</format>
+                    <aggregate>true</aggregate>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
@@ -103,6 +125,11 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
+                <configuration>
+                    <check>true</check>
+                    <format>xml</format>
+                    <aggregate>true</aggregate>
+                </configuration>
 			</plugin>
 		</plugins>
 	</reporting>
